--- a/memoria.Rmd
+++ b/memoria.Rmd
@@ -211,8 +211,6 @@ Vamos a realizar un submuestreo aleatorio de modo que nos quedemos con 1000 mues
 index <- lapply(c("agua", "fantasma", "fuego", "planta", "psiquico"), function(tipo) sample(which(dsFiltrado$tipo == tipo), 1500))
 nrow(dsFiltrado[index[[1]], ])
 unique(dsFiltrado[index[[1]], ]$tipo)
-
-strata(dsFiltrado, c("tipo"))
 ```
 
 
@@ -337,11 +335,11 @@ Debido a la gran cantidad de muestras y clases del dataset, hemos decidido queda
 T <- xtabs(~ nombre, ds)
 T[nombre = "Exeggcute"]
 T[nombre = "Squirtle"]
-T[nombre = "Pinsir"]
+T[nombre = "Metapod"]
 T[nombre = "Meowth"]
 T[nombre = "Kakuna"]
 
-nombrePokemonSelecionados = c("Exeggcute", "Squirtle", "Pinsir", "Meowth","Kakuna")
+nombrePokemonSelecionados = c("Exeggcute", "Squirtle", "Metapod", "Meowth","Kakuna")
 dsFiltrado = ds[ds$nombre %in% nombrePokemonSelecionados,]
 
 write.csv(dsFiltrado,file = "5Pokemon.csv",row.names = FALSE)
@@ -367,14 +365,70 @@ indicesAquitar = (apply(dsFiltrado, 2, function(x)length(unique(x))) == 1)
 dsFiltrado <- dsFiltrado[, !indicesAquitar]
 ```
 
+Al intentar usar la función tree para obtener un árbol de decisión obteniamos un error diciéndo que teníamos una variable categórica con más de 32 nivels, usando el código `str(dsFiltrado)`, observamos que el atributo pokestopDistanceKm era categórico, algo que no conisderamos que tenga mucho sentido. Con lo cual pasamos a transformar este atributo a numérico:
 ```{r}
 library("tree")
 
-arbol = tree(nombre ~., data=dsFiltrado)
-
+dsFiltrado$pokestopDistanceKm = as.numeric(as.character(dsFiltrado$pokestopDistanceKm))
 ```
 
+Este código nos informa de que se introduce un NA por coerción y explorando el dataset observamos que efectivamente hay un valor perdido, lo que vamos a hacer es eliminar esta muestra ya que tampoco consideramos que perdamos mucha información eliminando sólo una muestra:
 
+```{r}
+idx <- which(is.na(dsFiltrado$pokestopDistanceKm))
+dsFiltrado <- dsFiltrado[-idx,]
+```
 
+Ya que nos ha pasado esto vamos a comprobar si existe algún valor perdido más en nuestro dataset:
 
+```{r}
+sum(apply(dsFiltrado, 2, function(x) sum(is.na(x))) == 1)
+```
+
+como podemos ver no parece haber más valores perdido con los que procedemos a estudiar algunas técnicas de clasificación sobre este dataset. Comenzaremos con los árboles de decisión, en primer lugar lo que haremos es obtener dos particiones de entrenamiento y test. En una primera aproximación vamos a realizar simplemente un submuestreo aleatorio sin más; luego mejoraremos este procedimiento para ver cómo afecta la calidad de las particiones a los resultados de clasificación que obtengamos:
+
+```{r}
+set.seed(42)
+dsFiltrado = subset(dsFiltrado, select = -c(tipo))
+idx = sample(2, 0.7*nrow(dsFiltrado), replace = TRUE, prob = c(0.8, 0.2))
+train = dsFiltrado[idx == 1,]
+test = dsFiltrado[idx == 2,]
+```
+
+```{r}
+
+arbol = tree(nombre ~ ., data = train)
+plot(arbol) ; text(arbol)
+testPredict = predict(arbol, newdata = test, type = "class")
+tt = table(testPredict, test$nombre)
+sum(diag(tt))/nrow(test)*100
+```
+
+```{r}
+library(party)
+
+arbol = ctree(nombre ~ ., data = train)
+plot(arbol, type="simple")
+```
+
+```{r}
+testPredict = predict(arbol, newdata = test)
+tt = table(testPredict, test$nombre)
+dd = diag(tt)
+sum(dd)/nrow(test)*100
+```
+
+```{r}
+#rpart, rattle, RColorBrewer
+library(rpart)
+library(rpart.plot)
+
+arbol = rpart(nombre ~ ., data = train)
+plot(arbol) ; text(arbol)
+rpart.plot(arbol)
+testPredict = predict(arbol, newdata = test, type = "class")
+tt = table(testPredict, test$nombre)
+dd = diag(tt)
+sum(dd)/nrow(test)*100
+```
 
