--- a/memoria.Rmd
+++ b/memoria.Rmd
@@ -323,11 +323,11 @@ Debido a la gran cantidad de muestras y clases del dataset, hemos decidido queda
 T <- xtabs(~ nombre, ds)
 T[nombre = "Exeggcute"]
 T[nombre = "Squirtle"]
-T[nombre = "Metapod"]
+T[nombre = "Pinsir"]
 T[nombre = "Meowth"]
 T[nombre = "Kakuna"]
 
-nombrePokemonSelecionados = c("Exeggcute", "Squirtle", "Metapod", "Meowth","Kakuna")
+nombrePokemonSelecionados = c("Exeggcute", "Squirtle", "Pinsir", "Meowth","Kakuna")
 dsFiltrado = ds[ds$nombre %in% nombrePokemonSelecionados,]
 
 write.csv(dsFiltrado,file = "5Pokemon.csv",row.names = FALSE)
@@ -342,7 +342,7 @@ dsFiltrado <- read.csv("5Pokemon.csv")
 Eliminamos los atributos **pokemonId** y **class** ya que este atributo es el que es objetivo de nuestra clasificación:
 
 ```{r}
-dsFiltrado <- subset(dsFiltrado, select = -c(pokemonId, class))
+dsFiltrado <- subset(dsFiltrado, select = -c(pokemonId, class, tipo))
 ```
 
 Lo que vamos a hacer es buscar variables que tengan al menos dos valores distintos a lo largo del dataset. Las que solo presenten un valor serán eliminadas ya que no aportan ninguna información para la clasificación.
@@ -381,23 +381,6 @@ normalize <- function(x) {
 
 numericIdx <- sapply(dsFiltrado, is.numeric)
 dsFiltrado[, numericIdx] = apply(dsFiltrado[, numericIdx], 2, normalize)
-
-
-# dsFiltrado$latitude = normalize( dsFiltrado$latitude)
-# 
-# dsFiltrado$longitude = normalize(dsFiltrado$longitude)
-# 
-# dsFiltrado$temperature = normalize(dsFiltrado$temperature)
-# 
-# dsFiltrado$windSpeed = normalize(dsFiltrado$windSpeed)
-# 
-# dsFiltrado$pressure = normalize(dsFiltrado$pressure)
-# 
-# dsFiltrado$population_density = normalize(dsFiltrado$population_density)
-# 
-# dsFiltrado$gymDistanceKm = normalize(as.numeric(dsFiltrado$gymDistanceKm))
-# 
-# dsFiltrado$pokestopDistanceKm = normalize(as.numeric(dsFiltrado$pokestopDistanceKm))
 ```
 
 Como a partir del atributo **population_density** podemos obtener los 4 atributos **urban**, **suburban**, **midurban** y **rural**, ya que lo que queremos hacer con este nuevo dataset es clasificación, vamos a quitarlos:
@@ -431,28 +414,41 @@ dsFiltrado <- subset(dsFiltrado, select = -c(appearedTimeOfDay, appearedDayOfWee
 
 Al intentar usar la función tree para obtener un árbol de decisión obteniamos un error diciéndo que teníamos una variable categórica con más de 32 nivels, usando el código `str(dsFiltrado)`, observamos que el atributo pokestopDistanceKm era categórico, algo que no conisderamos que tenga mucho sentido. Con lo cual pasamos a transformar este atributo a numérico:
 ```{r}
-library("tree")
-
-
+idx <- which(colnames(dsFiltrado) == "weatherIcon.clear-day")
+colnames(dsFiltrado)[idx] <- "weatherIcon.clearDay"
+idx <- which(colnames(dsFiltrado) == "weatherIcon.clear-night")
+colnames(dsFiltrado)[idx] <- "weatherIcon.clearNight"
+idx <- which(colnames(dsFiltrado) == "weatherIcon.partly-cloudy-day")
+colnames(dsFiltrado)[idx] <- "weatherIcon.partlyCloudlyDay"
+idx <- which(colnames(dsFiltrado) == "weatherIcon.partly-cloudy-night")
+colnames(dsFiltrado)[idx] <- "weatherIcon.partlyCloudlyNight"
 ```
 
 como podemos ver no parece haber más valores perdido con los que procedemos a estudiar algunas técnicas de clasificación sobre este dataset. Comenzaremos con los árboles de decisión, en primer lugar lo que haremos es obtener dos particiones de entrenamiento y test. En una primera aproximación vamos a realizar simplemente un submuestreo aleatorio sin más; luego mejoraremos este procedimiento para ver cómo afecta la calidad de las particiones a los resultados de clasificación que obtengamos:
 
 ```{r}
 set.seed(42)
-dsFiltrado = subset(dsFiltrado, select = -c(tipo))
-idx = sample(2, 0.7*nrow(dsFiltrado), replace = TRUE, prob = c(0.8, 0.2))
-train = dsFiltrado[idx == 1,]
-test = dsFiltrado[idx == 2,]
+
+dsFiltradoClaseNum <- rep(0, nrow(dsFiltrado))
+dsFiltradoClaseNum[dsFiltrado$nombre == "Kakuna"] <- 1
+dsFiltradoClaseNum[dsFiltrado$nombre == "Meowth"] <- 2
+dsFiltradoClaseNum[dsFiltrado$nombre == "Pinsir"] <- 3
+dsFiltradoClaseNum[dsFiltrado$nombre == "Squirtle"] <- 4
+
+#dsFiltrado$nombre = dsFiltradoClaseNum
+idx = sample(2, 0.7*nrow(dsFiltrado), replace = TRUE, prob = c(0.7, 0.3))
+c(sample(which(dsFiltrado$nombre == "Pinsir"), 1000), sample(which(dsFiltrado$nombre == "Kakuna"), 1000), sample(which(dsFiltrado$nombre == "Meowth"), 1000), sample(which(dsFiltrado$nombre == "Squirtle"), 1000), sample(which(dsFiltrado$nombre == "Exeggcute"), 1000)) -> trainIdx
+train = dsFiltrado[trainIdx,]
+test = dsFiltrado[-trainIdx,]
 ```
 
 ```{r}
-
+library(tree)
 arbol = tree(nombre ~ ., data = train)
 plot(arbol) ; text(arbol)
 testPredict = predict(arbol, newdata = test, type = "class")
 tt = table(testPredict, test$nombre)
-sum(diag(tt))/nrow(test)*100
+cat("El porcentaje de acierto en test con un árbol de decisión hecho con tree:",sum(diag(tt))/nrow(test)*100)
 ```
 
 ```{r}
@@ -466,7 +462,7 @@ plot(arbol, type="simple")
 testPredict = predict(arbol, newdata = test)
 tt = table(testPredict, test$nombre)
 dd = diag(tt)
-sum(dd)/nrow(test)*100
+cat("El porcentaje de acierto con un arbol de decisión hecho con party es:",sum(dd)/nrow(test)*100)
 ```
 
 ```{r}
@@ -480,7 +476,7 @@ rpart.plot(arbol)
 testPredict = predict(arbol, newdata = test, type = "class")
 tt = table(testPredict, test$nombre)
 dd = diag(tt)
-sum(dd)/nrow(test)*100
+cat("El porcentaje de acierto con un árbol de decisión hecho con rpart es:", sum(dd)/nrow(test)*100)
 ```
 
 Dado los resultados obtenidos utilizando los m?todos de clasificaci?n vamos a proceder a utilizar **random forest**
@@ -490,10 +486,6 @@ Dado los resultados obtenidos utilizando los m?todos de clasificaci?n vamos a pr
 library(randomForest)
 library(data.table)
 library(ggplot2)
-set.seed(42)
-idx = sample(2, 0.7*nrow(dsFiltrado), replace = TRUE, prob = c(0.8, 0.2))
-train = dsFiltrado[idx == 1,]
-test = dsFiltrado[idx == 2,]
 
 modelo = nombre ~.
 arbol = randomForest(modelo, data = train)
@@ -524,7 +516,7 @@ bien=sum(dd)
 bien_clasificados=(bien/nrow(test))*100
 bien_rf=bien_clasificados
 #Bien y mal clasificados
-bien_clasificados
+cat("Porcentaje de acierto con un randomForest:", bien_clasificados)
 100-bien_clasificados
 
 #Precision, Recall y F-measure
@@ -560,14 +552,9 @@ Pruebas con KNN
 ```{r}
 library(kknn)
 
-set.seed(42)
-idx = sample(2, 0.7*nrow(dsFiltrado), replace = TRUE, prob = c(0.8, 0.2))
-entrena = dsFiltrado[idx == 1,]
-test = dsFiltrado[idx == 2,]
-
 modelo = nombre ~.
 
-arbol.kknn=kknn(formula=modelo,entrena, test, na.action=na.omit(),k=3)
+arbol.kknn=kknn(formula=modelo, train, test, na.action=na.omit(),k=3)
 fit=fitted(arbol.kknn)
 tt=table(fit,test$nombre)
 tt
@@ -575,16 +562,52 @@ tt
 dd=diag(tt)
 bien=sum(dd)
 bien_clasificados=(bien/nrow(test))*100
-#Bien y mal clasificados
-bien_knn=bien_clasificados
-bien_clasificados
-100-bien_clasificados
 
+bien_knn=bien_clasificados
+cat("Porcentaje de bien clasificados con knn:", bien_clasificados)
 ```
 
+```{r}
+library(e1071)
 
+mknns = tune.knn(dsFiltrado[, -135], dsFiltrado$nombre, k=1:20, tunecontrol = tune.control(sampling = "cross"), cross = 10)
+```
 
+Con el código anterior hemos obtenido que el mejor k de entre 1 y 20 para el algoritmo de KNN en nuestro dataset es 9, probemos este parámetro:
 
+```{r}
+modelo = nombre ~.
 
+arbol.kknn=kknn(formula=modelo, train, test, na.action=na.omit(),k=9)
+fit=fitted(arbol.kknn)
+tt=table(fit,test$nombre)
+tt
 
+dd=diag(tt)
+bien=sum(dd)
+bien_clasificados=(bien/nrow(test))*100
+
+bien_knn=bien_clasificados
+cat("Porcentaje de bien clasificados con knn:", bien_clasificados)
+```
+
+Aumenta ligeramente aunque no demasiado. No sabemos si esto se debe a emplear un paquete distinto al que pertenece tune.knn:
+
+```{r}
+library(xgboost)
+trainIndex <- createDataPartition(iris$Species, p = .8, list = FALSE, times = 1)
+idxNombre = which(colnames(dsFiltrado) == "nombre")
+xgb <- xgboost(data = data.matrix(dsFiltrado[trainIndex, -idxNombre]), label = dsFiltradoClaseNum[trainIndex], eta = 0.1, max_depth = 7, nround=25, subsample = 0.5, colsample_bytree = 0.5, seed = 1, eval_metric = "merror", objective = "multi:softmax", num_class = 5, nthread = 3)
+```
+
+exeggcute = 0
+kakuna = 1
+meowth = 2
+metapod = 3
+squirtle = 4
+
+```{r}
+y_pred <- predict(xgb, data.matrix(dsFiltrado[-trainIndex, -idxNombre]))
+sum(dsFiltradoClaseNum[-trainIndex] == y_pred)/nrow(dsFiltrado)*100
+```
 
