--- a/memoria.Rmd
+++ b/memoria.Rmd
@@ -94,43 +94,7 @@ Por lo comentando arriba se va a optar a eliminar los atributos correspondientes
 ds <- subset(ds, select = -c(cellId_90m, cellId_180m, cellId_370m, cellId_730m, cellId_1460m, cellId_2920m, cellId_5850m))
 ```
 
-TODO: explicación de por qué quitamos la ciudad y el continente:
-
-```{r}
-ds <- subset(ds, select = -c(city, continent))
-```
-
-Por otro lado al explorar el dataset observamos que en el atributo **appearedDayOfWeek** se tomaba el valor *dummy_day*, y al consultar los valores que toma este atributo a lo largo del dataset vimos que no aparecia el lunes cuando el resto de los dias de la semana si que aparecen, con lo cual procedemos a revisar si este valor del atributo se corresponde con el lunes o es simplemente un valor perdido:
-
-```{r}
-unique(ds$appearedDayOfWeek)
-unique(subset(ds, appearedDayOfWeek == "dummy_day")$appearedMonth)
-unique(subset(ds, appearedDayOfWeek == "dummy_day")$appearedDay)
-```
-
-Como podemos observar el único día en el que se registran observaciones en las que el atributo toma el valor *dummy_day* es el 8 de agosto que efectivamente fue un lunes. Además mientras se comprobaba este hecho hemos observado que todas las observaciones se realizaron en agosto y que además fue durante una semana de agosto, con lo cual el atributo **appearedMonth** no aporta ninguna información y además los atributos **appearedDayOfWeek** y **appearedDay** aportan la misma información, ya que al tomarse las muestras durante una sola semana hay una correspondencia biyectiva entre los valores de ambos atributos. Y como a priori no consideramos que la distancia entre días sea significativa, vamos a optar por quedarnos con el atributo categórico:
-
-```{r}
-#le damos un categoría más singnificativa que dummy_day al atributo
-levels(ds$appearedDayOfWeek)[1] <- "Monday"
-
-#vemos los meses y días en los que se tomaron las muestras
-unique(ds$appearedMonth)
-unique(ds$appearedDay)
-
-#eliminamos las variables innecesarias
-ds <- subset(ds, select = -c(appearedMonth, appearedDay))
-```
-
-Podemos comprobar también que podemos obtener los atributos **sunriseMinutesMidnight** y **sunsetMinutesMidnight** a partir de los atributos: **sunriseHour**, **sunriseMinute**, **sunsetHour** y **sunsetMinute**, con lo que procedemos a eliminar estos 4 últimos:
-
-```{r}
-sum(ds$sunriseMinutesMidnight == (ds$sunriseHour*60 + ds$sunriseMinute))/nrow(ds)*100
-sum(ds$sunsetMinutesMidnight == (ds$sunsetHour*60 + ds$sunsetMinute))/nrow(ds)*100
-ds <- subset(ds, select = -c(sunriseHour, sunriseMinute, sunsetHour, sunsetMinute))
-```
-
-Con lo cual como vemos el número de muestras y de atributos es muy elevado. Además el número de clases a clasificar es muy elevado por lo tanto lo que vamos a hacer es intentar clasificar los pokemon según su tipo, así que vamos a añadir dicha columna al dataset. Los tipos considerados son aquellos que se establecieron en la primera generación de Pokemon y se recogen por medio de las siguientes variables que almacenan una cadena indicando el tipo; estas variables se han añadido por comodidad a la hora de generar el vector de tipos que crearemos a continuación:
+Como vemos el número de muestras y de atributos es muy elevado. Además el número de clases a clasificar es muy elevado por lo tanto lo que vamos a hacer es intentar clasificar los pokemon según su tipo, así que vamos a añadir dicha columna al dataset. Los tipos considerados son aquellos que se establecieron en la primera generación de Pokemon y se recogen por medio de las siguientes variables que almacenan una cadena indicando el tipo; estas variables se han añadido por comodidad a la hora de generar el vector de tipos que crearemos a continuación:
 
 ```{r}
 P = "planta"
@@ -175,6 +139,66 @@ Ahora vamos a proceder a añadir la columna de tipos al dataset que hemos cargad
 ```{r}
 ds["tipo"] <- tipos[ds$class]
 ds["nombre"] <- nombres[ds$class]
+```
+
+Como ya hemos dicho en nuestro dataset tenemos información que nos permite conocer la posición en la que se produjo un avistamiento. Sin embargo, cuando pintamos los avistamientos que tenían como ciudad Madrid en el atributo **city** nos encontramos lo siguiente:
+
+```{r}
+world_map <- map_data("world")
+base_world <- ggplot() + coord_fixed() + xlab("") + ylab("") + geom_polygon(data=world_map, aes(x=long, y=lat, group=group), colour="lightsalmon4", fill="burlywood3")
+mapa <- base_world + geom_point(data = ds[ds$city == "Madrid",], aes(x = longitude, y = latitude))
+mapa
+```
+
+Es decir hay puntos en Madrid que no están situados en el mapa en una posición cercana a Madrid. En un principio pensamos que esto se debía a que el sistema de coordeandas del mapa sobre el que dibujamos los puntos, y los de la longitud y la latitud de nuestro dataset no coincidían. Pero antes decidimos dibujar los avistamientos relativos a pokemon que sólo aparecen en una regiones exclusivas: Mr. Mime en Europa, Tauros en Norte América, Kangaskhan en Australasia y Farfetch'd en Asia:
+
+```{r}
+nombresExclusivos <- c("Tauros", "Mr. Mime", "Kangaskhan", "Farfetch'd")
+coloresExclusivos <- rev(c("saddlebrown", "blue", "orangered3", "green3"))
+exclusivos <- ds[ds$nombre %in% nombresExclusivos,]
+
+escala <- scale_colour_manual("Pokemon", values = coloresExclusivos)
+mapa <- base_world + geom_point(data = exclusivos, aes(x = longitude, y = latitude,  colour = nombre)) + escala
+mapa
+```
+
+Como podemos ver la localización de estas visualizaciones es correcta, por lo tanto consideramos que las descripción del creador del dataset del atributo **city** no es correcta (``the city of a sighting''). Así que o bien este atributo es la ciudad del usuario que vio el pokemon o el uso de proxys (que muchos usuarios emplearon para falisificar su posición y así poder acceder a pokemon de otras localizaciones distintas a la suya real) ha falseado los datos. En cualquiera de los casos esta información no es de utilidad para la predicción que queremos realizar con lo que la eliminaremos, junto con el atributo **continent**.
+
+Pero antes vamos a emplear esta información. Y es que debemos pensar que un dataset no ha de servir únicamente para el problema que se plantea con él. Al tener datos de una aplicación empleada por tantos usuarios internacionalmente el número de datos indirectos que podemos extraer de él es muy grande, y de gran utilidad. En esta ocasión, considerando que el atributo **city** se refiere a la ciudad del usuario y que por tanto la localización de las observaciones se debe a viajes reales realizados por los usuarios, podemos extraer información sobre los desplazamientos realizados por los usuarios de la aplicación. En esta ocasión nos vamos a centrar en ver los viajes realizados por habitantes de Madrid:
+
+
+```{r}
+ds <- subset(ds, select = -c(city, continent))
+```
+
+Por otro lado al explorar el dataset observamos que en el atributo **appearedDayOfWeek** se tomaba el valor *dummy_day*, y al consultar los valores que toma este atributo a lo largo del dataset vimos que no aparecia el lunes cuando el resto de los dias de la semana si que aparecen, con lo cual procedemos a revisar si este valor del atributo se corresponde con el lunes o es simplemente un valor perdido:
+
+```{r}
+unique(ds$appearedDayOfWeek)
+unique(subset(ds, appearedDayOfWeek == "dummy_day")$appearedMonth)
+unique(subset(ds, appearedDayOfWeek == "dummy_day")$appearedDay)
+```
+
+Como podemos observar el único día en el que se registran observaciones en las que el atributo toma el valor *dummy_day* es el 8 de agosto que efectivamente fue un lunes. Además mientras se comprobaba este hecho hemos observado que todas las observaciones se realizaron en agosto y que además fue durante una semana de agosto, con lo cual el atributo **appearedMonth** no aporta ninguna información y además los atributos **appearedDayOfWeek** y **appearedDay** aportan la misma información, ya que al tomarse las muestras durante una sola semana hay una correspondencia biyectiva entre los valores de ambos atributos. Y como a priori no consideramos que la distancia entre días sea significativa, vamos a optar por quedarnos con el atributo categórico:
+
+```{r}
+#le damos un categoría más singnificativa que dummy_day al atributo
+levels(ds$appearedDayOfWeek)[1] <- "Monday"
+
+#vemos los meses y días en los que se tomaron las muestras
+unique(ds$appearedMonth)
+unique(ds$appearedDay)
+
+#eliminamos las variables innecesarias
+ds <- subset(ds, select = -c(appearedMonth, appearedDay))
+```
+
+Podemos comprobar también que podemos obtener los atributos **sunriseMinutesMidnight** y **sunsetMinutesMidnight** a partir de los atributos: **sunriseHour**, **sunriseMinute**, **sunsetHour** y **sunsetMinute**, con lo que procedemos a eliminar estos 4 últimos:
+
+```{r}
+sum(ds$sunriseMinutesMidnight == (ds$sunriseHour*60 + ds$sunriseMinute))/nrow(ds)*100
+sum(ds$sunsetMinutesMidnight == (ds$sunsetHour*60 + ds$sunsetMinute))/nrow(ds)*100
+ds <- subset(ds, select = -c(sunriseHour, sunriseMinute, sunsetHour, sunsetMinute))
 ```
 
 Veamos entonces cómo se distribuyen las muestras que tenemos según el tipo de pokemon avistado:
